<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Story App</string>
    <string name="deksripsi_title">Create &amp; Share Your Photos and Stories</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="title_login_page">Log In with Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Create Your Account</string>
    <string name="name">Username</string>
    <string name="signup">Sign-Up</string>
    <string name="logout">Log Out</string>
    <string name="message_welcome_page">Welcome</string>
    <string name="gambar">Image</string>
    <string name="description">Description</string>
    <string name="error">Error</string>
    <string name="menu_1">Language</string>
    <string name="menu_2">Log Out</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user">User</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image">Error Occurred</string>
    <string name="upload_success">Upload Success</string>
    <string name="buat_akun">Account Successfully Created</string>
    <string name="next">Next</string>
    <string name="error_pasw">Password must be at least 8 characters</string>
    <string name="error_email">Invalid email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="login_failed">Failed to Login</string>


</resources>